@@ -20,9 +20,6 @@
    Define this if you want to use names which are legal for VMS */
 #define USE_VMS_FILENAMES 1
 
-/* More issues with how VMS names files, kind of a kludge.  See login.c.  */
-#define NO_SLASH_AFTER_HOME 1
-
 /* Define to empty if the keyword does not work.  */
 /* #undef const */
 
